changed card style on home page styling and improved design for larger screens

--- a/cards/templates/addcards.html
+++ b/cards/templates/addcards.html
@@ -8,7 +8,7 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-sm-12 col-lg-6 margin-center">
+		<div class="col-sm-12 col-lg-6 pb-5 margin-center">
 			<form method="POST" enctype="multipart/form-data">
 				{% csrf_token %}
 				{{ form | as_bootstrap }}
