--- a/cards/templates/cardinformation.html
+++ b/cards/templates/cardinformation.html
@@ -16,7 +16,7 @@
 			<p><span class="boldtext">Listing Published date:</span> {{ card.listing_published_date }}
 			</p>
 			<div class="row pt-4">
-				<a href="{% url 'get_cards' %}" class="button-effect nobreak">View Other Listings</a>
+				<a href="{% url 'get_cards' %}" class="button-effect nobreak">View All Listings</a>
 				{% if user == card.user %}
 				    <a href="{% url 'edit_card' card.id %}" class="button-effect nobreak">Edit Listing</a>
 				{% endif %}
