--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -95,6 +95,10 @@ a:hover{
     padding-left: 0px;
     padding-right: 0px;
 }
+
+.relative{
+    position: relative;
+}
 /*End of Utility Classes*/
 
 /*Min height so that footer looks nice*/
@@ -120,7 +124,18 @@ a:hover{
 
 /*End of min height*/
 
+/*Django Messages*/
 
+.django-message{
+    width: auto;
+    position: absolute;
+    z-index: 2;
+    background-color: white;
+}
+
+/*End of Django Messages*/
+
+/*Misc Document Classes*/
 .navbar-background{
     background-color: #2a3439;
     padding: 0;
@@ -135,9 +150,8 @@ a:hover{
     position: absolute;
     right: 4%;
     bottom: 7%;
-    background-color: white;
+    color: #F5F5F5;
     padding: 10px 10px 5px 10px;
-    border-radius: 4px;
     display: none;
 }
 #cover-image{
@@ -216,6 +230,10 @@ a:hover{
     max-width: 100%;
     height: auto;
 }
+
+/*End of Misc Document Classes*/
+
+
 
 /*Shopping Cart*/
 .card{
@@ -466,6 +484,10 @@ textarea.form-control {
     .card{
         margin-bottom: 25px;
         width: 60%;
+    }
+    .django-message{
+        left: 50%;
+        margin-left: -138px;
     }
 }
 
