--- a/search/templates/search.html
+++ b/search/templates/search.html
@@ -35,7 +35,25 @@
 						<h4>Card Condition</h4>
 					</div>
 					<div class="co-sm-12 col-md-8">
-						<input class="form-control" type="text" name="condition" placeholder="Eg. NM, EX, GD, LP">
+                        
+
+                        <!--More Complex Filter Attempt-->
+                        <div class="input-group mb-3">
+                            <select class="custom-select" id="inputGroupSelect01" name="condition">
+                                <option value="M">Mint</option>
+                                <option selected value="NM">Near Mint</option>
+                                <option value="EX">Excellent</option>
+                                <option value="GD">Good</option>
+                                <option value="LP">Lightly Played</option>
+                                <option value="PL">Played</option>
+                                <option value="P">Poor</option>
+                            </select>
+                        </div>
+                        <!---->
+
+						<!--
+                            <input class="form-control" type="text" name="condition" placeholder="Eg. NM, EX, GD, LP">
+                        -->
                     </div>
 				</div>
 
