fixed condition filtering to only show the exact condition, not mixing up things like N and NM

--- a/search/templates/search.html
+++ b/search/templates/search.html
@@ -40,8 +40,9 @@
                         <!--More Complex Filter Attempt-->
                         <div class="input-group mb-3">
                             <select class="custom-select" id="inputGroupSelect01" name="condition">
+                                <option selected value=""></option>
                                 <option value="M">Mint</option>
-                                <option selected value="NM">Near Mint</option>
+                                <option value="NM">Near Mint</option>
                                 <option value="EX">Excellent</option>
                                 <option value="GD">Good</option>
                                 <option value="LP">Lightly Played</option>
@@ -54,6 +55,15 @@
 						<!--
                             <input class="form-control" type="text" name="condition" placeholder="Eg. NM, EX, GD, LP">
                         -->
+                    </div>
+				</div>
+
+                <div class="row advanced-search">
+					<div class="col-sm-12 col-md-4">
+						<h4>Vendor Name</h4>
+					</div>
+				    <div class="co-sm-12 col-md-8">
+						<input class="form-control" type="text" name="vendor">
                     </div>
 				</div>
 
