--- a/search/templates/search.html
+++ b/search/templates/search.html
@@ -34,10 +34,7 @@
 					<div class="col-sm-12 col-md-4">
 						<h4>Card Condition</h4>
 					</div>
-					<div class="co-sm-12 col-md-8">
-                        
-
-                        <!--More Complex Filter Attempt-->
+					<div class="co-sm-12 col-md-8">     
                         <div class="input-group mb-3">
                             <select class="custom-select" id="inputGroupSelect01" name="condition">
                                 <option selected value=""></option>
@@ -50,11 +47,6 @@
                                 <option value="P">Poor</option>
                             </select>
                         </div>
-                        <!---->
-
-						<!--
-                            <input class="form-control" type="text" name="condition" placeholder="Eg. NM, EX, GD, LP">
-                        -->
                     </div>
 				</div>
 
@@ -64,6 +56,15 @@
 					</div>
 				    <div class="co-sm-12 col-md-8">
 						<input class="form-control" type="text" name="vendor">
+                    </div>
+				</div>
+
+                <div class="row advanced-search">
+					<div class="col-sm-12 col-md-4">
+						<h4>Min Price (£)</h4>
+					</div>
+				    <div class="co-sm-12 col-md-8">
+						<input class="form-control" type="text" name="minprice">
                     </div>
 				</div>
 
