--- a/search/templates/search.html
+++ b/search/templates/search.html
@@ -51,9 +51,15 @@
                         </div>
                         <!---->
 
-						<!--
-                            <input class="form-control" type="text" name="condition" placeholder="Eg. NM, EX, GD, LP">
-                        -->
+                    </div>
+				</div>
+
+                <div class="row advanced-search">
+					<div class="col-sm-12 col-md-4">
+						<h4>Vendor Name</h4>
+					</div>
+				    <div class="co-sm-12 col-md-8">
+						<input class="form-control" type="text" name="vendor">
                     </div>
 				</div>
 
