removed mandatory condition filtering

--- a/search/templates/search.html
+++ b/search/templates/search.html
@@ -40,8 +40,9 @@
                         <!--More Complex Filter Attempt-->
                         <div class="input-group mb-3">
                             <select class="custom-select" id="inputGroupSelect01" name="condition">
+                                <option selected value=""></option>
                                 <option value="M">Mint</option>
-                                <option selected value="NM">Near Mint</option>
+                                <option value="NM">Near Mint</option>
                                 <option value="EX">Excellent</option>
                                 <option value="GD">Good</option>
                                 <option value="LP">Lightly Played</option>
