--- a/search/templates/search.html
+++ b/search/templates/search.html
@@ -37,7 +37,7 @@
 				<div class="co-sm-12 col-md-8">     
                         <div class="input-group mb-3">
                             <select class="custom-select" id="inputGroupSelect01" name="condition">
-                                <option selected value=""></option>
+                                <option selected value="1"></option>
                                 <option value="M">Mint</option>
                                 <option value="NM">Near Mint</option>
                                 <option value="EX">Excellent</option>
