--- a/search/templates/search.html
+++ b/search/templates/search.html
@@ -64,7 +64,16 @@
 						<h4>Min Price (£)</h4>
 					</div>
 				    <div class="co-sm-12 col-md-8">
-						<input class="form-control" type="text" name="minprice">
+						<input class="form-control" value="0.00" type="number" name="minprice" step=".01" required>
+                    </div>
+				</div>
+
+                <div class="row advanced-search">
+					<div class="col-sm-12 col-md-4">
+						<h4>Max Price (£)</h4>
+					</div>
+				    <div class="co-sm-12 col-md-8">
+						<input class="form-control" value="999999.00" type="number" name="maxprice" step=".01" required>
                     </div>
 				</div>
 
