updated README, and improved some button styling in checkout pages

--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -49,14 +49,14 @@
                     <p class="card-text">SE12 3AD</p>
 				</div>
 			</div>
-			<div class="row justify-content-center">
+			<div class="row">
 				<p>{{ card_count }} items</p>
 			</div>
-			<div class="row justify-content-center">
+			<div class="row">
 				<p>Total: £{{ total }}</p>
 			</div>
-			<div class="row justify-content-center">
-				<a href="{% url 'checkout' %}" class="btn btn-success" role="button">Checkout</a>
+			<div class="row">
+				<a href="{% url 'checkout' %}" class="button-effect" role="button">Checkout</a>
 			</div>
 		</div>
 	</div>
