--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -48,7 +48,7 @@
 
 		{% csrf_token %}
 		<div class="form-group">
-			<input class="btn btn-primary" id="submit_payment_button" name="commit" type="submit" value="Submit Payment">
+			<input class="button-effect" id="submit_payment_button" name="commit" type="submit" value="Submit Payment">
     </div>
 	</form>
 </div>
