--- a/accounts/templates/user_profile.html
+++ b/accounts/templates/user_profile.html
@@ -52,7 +52,7 @@
 									{{ card.listing_published_date }}
 								</p>
 								<div class="row pt-2">
-									{% if user.is_authenticated %}
+									{% if user.is_authenticated  and user.username != card.user.username%}
 									<form method="post" action="{% url 'add_to_cart' card.id %}">
 										{% csrf_token %}
 										<div class="input-group cart-form">
@@ -88,7 +88,7 @@
 									{{ card.listing_published_date }}
 								</p>	
                                 <div class="row pt-2">
-									{% if user.is_authenticated %}
+									{% if user.is_authenticated and user.username != card.user.username %}
 									<form method="post" action="{% url 'add_to_cart' card.id %}">
 										{% csrf_token %}
 										<div class="input-group cart-form">
@@ -123,7 +123,7 @@
 					<th scope="col">Condition</th>
 					<th scope="col">Price</th>
 					<th scope="col"></th>
-					{% if user.is_authenticated %}
+					{% if user.is_authenticated and user.username != card.user.username %}
 					<th scope="col"></th>
 					{% endif %}
 				</tr>
@@ -145,7 +145,7 @@
 					<td>{{ card.card_condition }}</td>
 					<td>£{{ card.card_price }}</td>
 					<td><a href="{% url 'card_detail' card.id %}" class="button-effect nobreak">View Listing</a></td>
-					{% if user.is_authenticated %}
+					{% if user.is_authenticated and user.username != card.user.username %}
 					    <td>
 							<div>
 								<form method="post" action="{% url 'add_to_cart' card.id %}">
