--- a/accounts/templates/user_profile.html
+++ b/accounts/templates/user_profile.html
@@ -52,7 +52,7 @@
 									{{ card.listing_published_date }}
 								</p>
 								<div class="row pt-2">
-									{% if user.is_authenticated  and user.username != card.user.username%}
+									{% if user.is_authenticated and user != card.user %}
 									<form method="post" action="{% url 'add_to_cart' card.id %}">
 										{% csrf_token %}
 										<div class="input-group cart-form">
@@ -61,6 +61,9 @@
 										</div>
 									</form>
 									{% endif %}
+                                    {% if user == card.user %}
+				                        <a href="{% url 'edit_card' card.id %}" class="button-effect nobreak">Edit Listing</a>
+				                    {% endif %}
 								</div>
 							</div>
 						</div>
@@ -88,7 +91,7 @@
 									{{ card.listing_published_date }}
 								</p>	
                                 <div class="row pt-2">
-									{% if user.is_authenticated and user.username != card.user.username %}
+									{% if user.is_authenticated and user != card.user %}
 									<form method="post" action="{% url 'add_to_cart' card.id %}">
 										{% csrf_token %}
 										<div class="input-group cart-form">
@@ -96,6 +99,8 @@
 											<button class="btn" type="submit"><i class="fas fa-cart-plus fa-lg"></i></button>
 										</div>
 									</form>
+									{% elif user == card.user %}
+				                        <a href="{% url 'edit_card' card.id %}" class="button-effect nobreak">Edit Listing</a>
 									{% endif %}
 								</div>
 							</div>
