--- a/cards/templates/cardinformation.html
+++ b/cards/templates/cardinformation.html
@@ -20,7 +20,7 @@
 				{% if user == card.user %}
 				    <a href="{% url 'edit_card' card.id %}" class="button-effect nobreak">Edit Listing</a>
 				{% endif %}
-				{% if user.is_authenticated %}
+				{% if user.is_authenticated and user != card.user %}
 				<form method="post" action="{% url 'add_to_cart' card.id %}">
 					{% csrf_token %}
 					<div class="input-group cart-form">
