--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -139,6 +139,7 @@ a:hover{
 /*End of Django Messages*/
 
 /*Misc Document Classes*/
+
 .navbar-background{
     background-color: #2a3439;
     padding: 0;
@@ -293,6 +294,7 @@ a:hover{
 
 .cards-background{
     background-color: #F5F5F5;
+    min-height: 825px;
 }
 
 .custom-controls{
